# aoc2020

./: .gitignore  Cargo.toml  README.md
benches/: day01.rs  day02.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  everything.rs
days/: test2.txt
src/: lib.rs  main.rs
src/days/: day01.rs  day02.rs  mod.rs
src/days/day1/: mod.rs  parser.rs
src/days/day10/: mod.rs  parser.rs
src/days/day11/: mod.rs  parser.rs
src/days/day12/: mod.rs  parser.rs
src/days/day13/: mod.rs  parser.rs
src/days/day2/: mod.rs  parser.rs
src/days/day3/: mod.rs  parser.rs
src/days/day4/: mod.rs  parser.rs
src/days/day5/: mod.rs  parser.rs
src/days/day6/: mod.rs  parser.rs
src/days/day7/: mod.rs  parser.rs
src/days/day8/: mod.rs  parser.rs
src/days/day9/: mod.rs  parser.rs
src/days/template/: mod.rs  parser.rs
src/utils/: mod.rs  reader.rs
