[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Kent Daleng <kent.daleng@nav.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.3"

[[bin]]
name = "aoc2020"
path = "src/bin/main.rs"
bench = false

[[bench]]
name = "day01"
harness = false
