[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Kent Daleng <kent.daleng@nav.no>"]
edition = "2018"
default-run = "aoc2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.3"

[[bin]]
name = "aoc2020"
path = "src/bin/main.rs"
bench = false

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day4"
harness = false

[[bench]]
name = "day5"
harness = false

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day7"
harness = false

[[bench]]
name = "day8"
harness = false

[[bench]]
name = "day9"
harness = false

[[bench]]
name = "everything"
harness = false
